Fix horizontal scroll and header divs

--- a/Lab1/styles.css
+++ b/Lab1/styles.css
@@ -1,6 +1,6 @@
 :root {
   --fs-base: 14px;
-  --clr-footer: rgb(154, 206, 106);
+  --clr-footer: rgb(195, 233, 124);
   --clr-footer-text: rgb(37, 173, 173);
   --clr-box3: rgb(117, 43, 236);
   --clr-container2: rgb(0, 0, 0);
@@ -25,8 +25,7 @@ html,
 body {
   display: flex;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
+  height: 100%;
 }
 
 header div {
@@ -119,7 +118,7 @@ div > h3 {
   height: auto;
 }
 
-.link {
+header div {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -127,11 +126,11 @@ div > h3 {
   background-color: var(--clr-header-link);
 }
 
-.headerSignBox {
+header h1 {
   flex: 1;
   height: 100%;
   background-color: var(--clr-headersignbox);
-  font-size: 0.8vw;
+  font-size: 1.5vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -140,13 +139,8 @@ div > h3 {
 footer {
   position: relative;
   display: flex;
-  background-color: --clr-footer;
+  background-color: var(--clr-footer);
   flex: 1;
-}
-
-footer h1,
-header h1 {
-  background-color: var(--clr-signboxcontent);
 }
 
 footer h1 {
